tests/ui/dyn-star/gated-span.stderr
error[E0658]: `dyn*` trait objects are experimental
  --> $DIR/gated-span.rs:5:4
   |
LL | t!(dyn* Send);
   |    ^^^^
   |
   = note: see issue #102425 <https://github.com/crablang/crablang/issues/102425> for more information
   = help: add `#![feature(dyn_star)]` to the crate attributes to enable

error: aborting due to previous error

For more information about this error, try `crablangc --explain E0658`.
